z-index: -1 for pre:after ``` because avoid overrwap with icon

--- a/www.jxck.io/assets/css/pre.css
+++ b/www.jxck.io/assets/css/pre.css
@@ -11,6 +11,7 @@ pre::before {
 }
 
 pre::after {
+  z-index: -1;
   position: relative;
   top: -1em;
   content:"\A```";
